[tool.poetry]
name = "example-lab"
version = "0.1.0"
description = ""
authors = ["AhmadSailik <asailik1993@gmail.com>"]
readme = "README.md"
packages = [{include = "example_lab"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.12.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
